spacing fix

--- a/gee.css
+++ b/gee.css
@@ -113,7 +113,7 @@ a:hover {
     color: #001612;
     column-gap: 10%;
     margin: 15%;
-    
+    grid-auto-rows: minmax(30vw, auto) 
 }
 
 .wrapper_photography {
